<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E8C3232"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="233dp"
        android:layout_height="32dp"
        android:background="#5BC56384"
        android:text="@string/MainText"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textask1"
            android:layout_width="251dp"
            android:layout_height="49dp"
            android:layout_margin="10sp"
            android:background="#FBFBFB"
            android:hint="@string/hinttext"
            android:textColor="#000000" />

        <Button
            android:id="@+id/askbut0"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_margin="6sp"
            android:layout_weight="1"
            android:background="#D179D6"
            android:text="@string/butask1"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="379dp"
        android:layout_height="84dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.977">

        <Button
            android:id="@+id/onefrag"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="16sp"
            android:layout_weight="1"
            android:background="#F19191"
            android:minHeight="48dp"
            android:text="@string/mainbut2"
            android:textColor="#283593"
            android:textSize="16sp" />

        <Button
            android:id="@+id/twofrag"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="16sp"
            android:layout_weight="1"
            android:background="#F19191"
            android:text="@string/mainbut1"
            android:textColor="#283593"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="387dp"
        android:layout_height="177dp"
        android:background="#00C10000"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.747">

    </FrameLayout>

    <Button
        android:id="@+id/act2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="активность 2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame1" />

    <TextView
        android:id="@+id/textout1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#ECA5C6"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>